<?xml version="1.0"?>
<package format="2">
    <name>image_processor</name>
    <version>0.0.1</version>
    <description>The image_processor package</description>

    <maintainer email="domj.roli@gmail.com">Volubepossum</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>